testing/errors/pcundefined2.a

	!pseudopc $8000 {	; -> "Program counter undefined."
	}
